# Mezeporta

./: README.md  build-launcher.mjs  index.html  package-lock.json  package.json  renamed_items.txt  vite.config.js
locale/: en.ftl  jp.ftl
scripts/: build-frontend.mjs  build-linux.mjs  build-meze-deps.mjs  check-linux-helper.mjs  dev-linux.mjs  wsl-linux.mjs
scripts/linux/: install-build-deps-arch.sh  install-build-deps-ubuntu.sh  install-deps-arch.sh  install-deps-ubuntu.sh
src/: Main.vue  activeEvents.js  altClientSavedata.js  altClientStats.js  bridge.js  common.js  controllerNavigation.css  imageCache.js  main.js  manifest.rs  sfx.js  store.js  style.css  useLauncherGamepad.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  window.main.json
src-tauri/meze-butter/: Cargo.toml
src-tauri/meze-butter/src/: error.rs  friend_injection.rs  lib.rs  mhf.rs  utils.rs
src-tauri/meze-butter/src/layouts/: layout_f4.rs  layout_f5.rs  layout_g3.rs  layout_g5_1.rs  layout_g7.rs  layout_s6.rs  layout_s7k.rs  layout_z2t.rs  mod.rs
src-tauri/src/: altclient_stats.rs  config.rs  endpoint.rs  main.rs  manifest.rs  patcher.rs  server.rs  settings.rs  store.rs  user.rs
src/altclient/: savedataView.js
src/altclient/lookup/: altclient-lookup.json  name-overrides.json
src/classic/: Character.vue  Characters.vue  Launcher.vue  Login.vue  MessageList.vue  Patcher.vue  Settings.vue  style.css
src/components/: CharacterBookOverlay.vue  DistributionOverlay.css  DistributionOverlay.vue  FriendsOverlay.vue  GearIcon.vue  MailOverlay.vue
src/ps4/: Character.vue  Characters.vue  Launcher.vue  Login.vue  MessageList.vue  Patcher.vue  Settings.vue  style.css
src/settings/: SettingsButton.vue  SettingsCheckbox.vue  SettingsDropdown.vue  SettingsItem.vue  SettingsList.vue  settingsInfo.js  settingsPanelState.js
src/tauri_shim/: clipboard.js  dialog.js  event.js  shell.js  tauri.js  window.js
