[package]
name = "meze-butter"
version = "1.5.2"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
num_enum = "0.7"
serde_json = "1.0"
base64 = "0.22"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_Security", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_TextServices", "Win32_System_Memory", "Win32_System_WindowsProgramming", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"]

[[bin]]
name = "meze-deps"
path = "src/bin/meze_deps.rs"
